# Postgres-Everything

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
examples/: README.md  fastapi_demo.py  rag_app.py  task_worker.py
postgres_everything/: __init__.py  base.py  cache.py  client.py  connection.py  documents.py  exceptions.py  pubsub.py  queue.py  search.py  vectors.py
postgres_everything/embeddings/: base.py  openai.py  sentence_transformers.py
postgres_everything/migrations/: 001_documents.sql  002_queue.sql  003_search.sql  004_vectors.sql  005_cache.sql  runner.py
scripts/: init-extensions.sql
tests/: conftest.py  test_cache.py  test_documents.py  test_pubsub.py  test_queue.py  test_search.py  test_vectors.py
