[project]
name = "postgres-everything"
version = "0.1.0"
description = "Use PostgreSQL as your document DB, task queue, search engine, vector DB, cache, and pub/sub."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "psycopg[binary,pool]>=3.1.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
local = ["sentence-transformers>=2.2.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = ["postgres-everything[openai,local,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"